--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -312,7 +312,9 @@
     <string name="lock_clock_font_bold">Bold</string>
     <string name="lock_clock_font_italic">Italic</string>
     <string name="lock_clock_font_bold_italic">Bold Italic</string>
+    <string name="lock_clock_font_light">Light</string>
     <string name="lock_clock_font_light_italic">Light Italic</string>
+    <string name="lock_clock_font_thin">Thin</string>
     <string name="lock_clock_font_thin_italic">Thin Italic</string>
     <string name="lock_clock_font_condensed_normal">Condensed</string>
     <string name="lock_clock_font_condensed_italic">Condensed Italic</string>
