AE: LS clock fonts: Add more fonts (1/2)
Change-Id: I8653c381fd3cda9bb031c6f83781e3f385065848

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -312,8 +312,14 @@
     <string name="lock_clock_font_bold">Bold</string>
     <string name="lock_clock_font_italic">Italic</string>
     <string name="lock_clock_font_bold_italic">Bold Italic</string>
+    <string name="lock_clock_font_light_normal">Light Normal</string>
+    <string name="lock_clock_font_light_bold">Light Bold</string>
     <string name="lock_clock_font_light_italic">Light Italic</string>
+    <string name="lock_clock_font_light_bold_italic">Light Bold Italic</string>
+    <string name="lock_clock_font_thin_normal">Thin Normal</string>
+    <string name="lock_clock_font_thin_bold">Thin Bold</string>
     <string name="lock_clock_font_thin_italic">Thin Italic</string>
+    <string name="lock_clock_font_thin_bold_italic">ThincBold Italic</string>
     <string name="lock_clock_font_condensed_normal">Condensed</string>
     <string name="lock_clock_font_condensed_italic">Condensed Italic</string>
     <string name="lock_clock_font_condensed_bold">Condensed Bold</string>
