--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -259,6 +259,10 @@
     <string name="recents_show_fullscreen">Recents in fullscreen</string>
     <string name="recents_fullscreen_summary_enabled">Recents in fullscreen is enabled</string>
     <string name="recents_fullscreen_summary_disabled">Recents in fullscreen is disabled</string>
+    <string name="recents_full_screen_clock_title">Show clock</string>
+    <string name="recents_full_screen_clock_summary">Shows clock at the top while in fullscreen</string>
+    <string name="recents_full_screen_date_title">Show date</string>
+    <string name="recents_full_screen_date_summary">Shows date at the top while in fullscreen</string>
 
     <!-- Weather settings -->
     <string name="weahter_lockscreen_category">Lock screen weather options</string>
