AE: Move recents search widget toggle to AE (1/2)
Change-Id: Iaa3df178a77c99f01b584998a601920f1590d13e

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -675,4 +675,8 @@
     <string name="recents_show_membar_title">Memory bar</string>
     <string name="recents_show_membar_summary">Show a bar with the device\'s available memory</string>
 
+    <!-- Show/Hide Search Bar -->
+    <string name="recents_show_searchbar">Show search bar in recents menu</string>
+    <string name="keywords_recents_show_searchbar">recent recents disable enable show hide search bar searchbar</string>
+
 </resources>
