AE: Disable/Enable screenshot sound [2/2]
Change-Id: I7058ee085770c45f9015232f7f3d7800d01f5f6d

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -679,4 +679,8 @@
     <string name="recents_show_searchbar">Show search bar in recents menu</string>
     <string name="keywords_recents_show_searchbar">recent recents disable enable show hide search bar searchbar</string>
 
+    <!-- Screenshot sound -->
+    <string name="screenshot_sound_title">Screenshot sound</string>
+    <string name="screenshot_sound_summary">Plays sound effect when screenshot is taken</string>
+
 </resources>
