--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -159,6 +159,7 @@
     <string name="show_carrier_keyguard">Keyguard carrier</string>
     <string name="show_carrier_statusbar">Status bar carrier</string>
     <string name="show_carrier_enabled">Enabled</string>
+    <string name="status_bar_carrier_position">Location</string>
 
     <!-- Battery Bar -->
     <string name="battery_bar_title">Battery bar</string>
