Access Slim recent app sidebar trough AppSettingsExternal
Change-Id: Ib75c39ed6a1b1d6dabfe054643edc2a83dcd57c5

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -664,6 +664,7 @@
     <string name="recent_card_bg_color_title">Card background color</string>
     <string name="recent_card_text_color_title">Card text color</string>
     <string name="recent_reset_value_title">Reset values</string>
+    <string name="recent_app_sidebar_title">App sidebar</string>
 
     <!-- ATTENTION: RTL languages need to replace left with right -->
     <string name="recent_panel_lefty_mode_title">Show on the left edge</string>
