AE: Option to Disable Brightness Icon In Brightness Slider [2/2]
Change-Id: Ied45611ca825eb430cb6107c6d3240954f2a0348

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -681,4 +681,7 @@
     <string name="screenshot_sound_title">Screenshot sound</string>
     <string name="screenshot_sound_summary">Plays sound effect when screenshot is taken</string>
 
+    <string name="brightness_icon_title">Brightness icon </string>
+    <string name="brightness_icon_summary">Show a brightness icon to the left of the brighness slider to adjust auto-brightness</string>
+
 </resources>
