BatteryBar: Add ListPreference for devices without navbar
Change-Id: I06acfcc48e66a3b222e9b24488648357a2fa74a0

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -158,6 +158,7 @@
     <!-- Battery Bar -->
     <string name="battery_bar_title">Battery bar</string>
     <string name="battery_bar">Battery bar location</string>
+    <string name="battery_bar_no_navbar">Battery bar location</string>
     <string name="battery_bar_color">Battery bar color</string>
     <string name="battery_bar_cat">Battery bar style</string>
     <string name="battery_bar_style_title">Battery bar alignment</string>
