AE: Wakelock Blocker [3/3]
Change-Id: Ie00636445c36bc696af5fe6311187e74d22e60ef
Signed-off-by: LorDClockaN <davor@losinj.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -723,4 +723,8 @@
     <string name="trigger_bottom_title">Trigger height</string>
     <string name="trigger_bottom_summary">Adjust the height of the trigger area</string>
 
+    <!-- Wakelock blocker -->
+    <string name="wakelock_blocker_title">Wakelock Blocker</string>
+
+
 </resources>
