Disable Quick Settings on secure lockscreen (2/2)
Change-Id: Ice77d0e25725419a48dc6c109f4002f829d1afc0

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -726,5 +726,8 @@
     <!-- Wakelock blocker -->
     <string name="wakelock_blocker_title">Wakelock Blocker</string>
 
+    <!-- Quick settings disable on lockscreen -->
+    <string name="block_on_secure_keyguard_title">Disable quick settings on lockscreen</string>
+    <string name="block_on_secure_keyguard_summary">Disables quick settings in the keyguard for a secure lock only</string>
 
 </resources>
