AE: cleanup strings and reorder main layouts
PS1: reorder notifications drawer main layout
PS2: cleanup strings and remaining main layouts
PS3,4: cleanup WS

Change-Id: I071727a4feba772b935830b85c0520c06cf886ad

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="action_settings">Settings</string>
     <string name="first_layout_title">Placeholder for various shit\nand naked chicks!!!</string>
     <string name="second_layout_title">Second layout</string>
-    <string name="third_layout_title">Third Layout</string>
+    <string name="third_layout_title">Third layout</string>
     <string name="aicp_extras_title">AICP Extras</string>
     <string name="pun_title">One rom to rule them all</string>
     <string name="various_shit_title">Various shit</string>
@@ -86,19 +86,19 @@
     <string name="print_restart">Restart</string>
 
     <!-- Force expanded notifications -->
-    <string name="force_expanded_notifications_title">Force Expanded Notifications</string>
+    <string name="force_expanded_notifications_title">Force expanded notifications</string>
     <string name="force_expanded_notifications_summary">Available only for apps that support expanded notifications</string>
 
     <!-- Disabling immersive mode messages -->
-    <string name="disable_immersive_message_title">Disable Immersive Mode Messages</string>
-    <string name="disable_immersive_message_summary">This will hide all Immersive Mode Messages</string>
+    <string name="disable_immersive_message_title">Disable Immersive Mode messages</string>
+    <string name="disable_immersive_message_summary">This will hide all Immersive Mode messages</string>
 
     <!-- Disabling FC notifications -->
-    <string name="disable_fc_notifications_title">Disable FC Notifications</string>
+    <string name="disable_fc_notifications_title">Disable FC notifications</string>
     <string name="disable_fc_notifications_summary">This will hide all force close notificaitons</string>
 
     <!-- Color Picker -->
-    <string name="dialog_color_picker">Color Picker</string>
+    <string name="dialog_color_picker">Color picker</string>
     <string name="press_color_to_apply">Press on color below to apply</string>
     <string name="arrow_right">→</string>
     <string name="arrow_down">↓</string>
@@ -108,7 +108,7 @@
     <string name="color_default">Default</string>
 
     <!-- Network traffic -->
-    <string name="traffic_category">Traffic Indicators</string>
+    <string name="traffic_category">Traffic indicators</string>
     <string name="traffic_title">Traffic</string>
     <string name="network_traffic_title">Network traffic</string>
     <string name="show_network_traffic_state">Status bar traffic monitor</string>
@@ -137,13 +137,13 @@
     <string name="su_indicator_summary_off">Toggle to show superuser indicator when a session is active</string>
 
     <!--Time Contexual Header -->
-    <string name="status_bar_custom_header_title">Time Contextual Header</string>
+    <string name="status_bar_custom_header_title">Time contextual header</string>
     <string name="status_bar_custom_header_summary">Enable notification panel header image</string>
     <string name="status_bar_custom_header_default_title">Use Poly HD images</string>
     <string name="status_bar_custom_header_default_summary">Enable for Polygraphic HD images. Disable for original images.</string>
 
     <!-- Carrier Label -->
-    <string name="carrier_options">Carrier Label</string>
+    <string name="carrier_options">Carrier label</string>
     <string name="custom_carrier_label_title">Custom carrier label</string>
     <string name="custom_carrier_label_explain">Please enter a new label. Leave blank to revert to stock label.</string>
     <string name="custom_carrier_label_notset">Custom label currently not set</string>
@@ -309,9 +309,9 @@
     <string name="weather_reset_title">Reset weather values</string>
 
     <!-- Lock Clock Fonts -->
-    <string name="lock_clock_font_title">Lock Clock Fonts</string>
+    <string name="lock_clock_font_title">Lock Clock fonts</string>
     <string name="lock_clock_font_summary">Change the default font of the lockscreen clock widget</string>
-    <string name="lock_clock_font_dialog_title">Select lock clock font</string>
+    <string name="lock_clock_font_dialog_title">Select Lock Clock font</string>
     <string name="lock_clock_font_stock">Normal (default)</string>
     <string name="lock_clock_font_bold">Bold</string>
     <string name="lock_clock_font_italic">Italic</string>
@@ -345,12 +345,12 @@
     <string name="stats_title">Stats</string>
 
     <!-- Notification -->
-    <string name="notification_ticker">Statistics Opted-In</string>
+    <string name="notification_ticker">Statistics opted-In</string>
     <string name="notification_title">AICP Statistics</string>
     <string name="notification_desc">Enable or Disable Anonymous Statistics</string>
-    
+
     <string name="main_link">&lt;a href=&quot;http://www.cyanogenmod.org/blog/cmstats-what-it-is-and-why-you-should-opt-in&quot;&gt;Learn More&lt;/a&gt;</string>
-    
+
     <!-- About device screen, list item title. Takes the user to the screen about opting in or out of anonymous statistics. -->
     <string name="anonymous_statistics_title">AICP Stats</string>
     <string name="anonymous_statistics_summary">Help AICP by opting into anonymous statistics reporting</string>
@@ -358,7 +358,7 @@
     <string name="anonymous_statistics_warning">Opting into AICP Stats will allow non-personal data to be submitted to 
          our servers. The information submitted includes an unique identifier, which does not compromise your privacy or personal data. 
          The data is submitted every 7 days.\n\nFor an example of the data that is submitted, tap on Preview Data.</string>
- 
+
     <string name="pref_settings">Settings</string>
     <string name="enable_reporting_title">Enable reporting</string>
     <string name="disable_reporting_persistent">Persistent opt-out</string>
@@ -380,14 +380,14 @@
     <string name="preview_device_title">Device</string>
     <string name="preview_version_title">Version</string>
     <string name="preview_country_title">Country</string>
-    <string name="preview_carrier_title">Carrier</string>    
-    <string name="preview_romname_title">ROM Name</string>    
+    <string name="preview_carrier_title">Carrier</string>
+    <string name="preview_romname_title">ROM Name</string>
     <string name="preview_romversion_title">AICP Version</string>
     <string name="preview_buildtype_title">AICP Build Type</string>
 
     <!-- Circle app bar -->
     <string name="category_app_circle_bar_title">App launcher</string>
-    <string name="app_circle_bar_title">App circle bar</string>
+    <string name="app_circle_bar_title">App Circle Bar</string>
     <string name="app_circle_bar_summary">Show circle app launcher after touching right side of screen</string>
     <string name="app_circle_bar_included_apps_title">Included apps</string>
     <string name="app_circle_bar_included_apps_summary">Apps will show in app circle bar</string>
@@ -693,23 +693,23 @@
     <string name="brightness_icon_summary">Show a brightness icon to the left of the brighness slider to adjust auto-brightness</string>
 
     <!-- App sidebar -->
-    <string name="app_sidebar_title">App side bar</string>
-    <string name="app_sidebar_enable_title">Enable Appbar</string>
-    <string name="app_sidebar_enable_summaryOn">Appbar is enabled</string>
-    <string name="app_sidebar_enable_summaryOff">Appbar is disabled</string>
-    <string name="app_sidebar_setup_items_title">Setup Appbar content</string>
-    <string name="app_sidebar_setup_items_summary">Add, remove, and position items in the appbar</string>
-    <string name="app_sidebar_transparency_title">Appbar transparency</string>
-    <string name="app_sidebar_transparency_summary">Adjust the Appbar transparency level</string>
-    <string name="app_sidebar_position_title">Appbar position</string>
-    <string name="app_sidebar_position_summary">Position the Appbar on the left or right side of the screen</string>
+    <string name="app_sidebar_title">App Sidebar</string>
+    <string name="app_sidebar_enable_title">Enable App Sidebar</string>
+    <string name="app_sidebar_enable_summaryOn">App Sidebar is enabled</string>
+    <string name="app_sidebar_enable_summaryOff">App Sidebar is disabled</string>
+    <string name="app_sidebar_setup_items_title">Setup sidebar content</string>
+    <string name="app_sidebar_setup_items_summary">Add, remove, and position items in sidebar</string>
+    <string name="app_sidebar_transparency_title">Sidebar transparency</string>
+    <string name="app_sidebar_transparency_summary">Adjust sidebar transparency level</string>
+    <string name="app_sidebar_position_title">Sidebar position</string>
+    <string name="app_sidebar_position_summary">Position the sidebar on the left or right side of the screen</string>
     <string name="app_sidebar_position_left">Left</string>
     <string name="app_sidebar_position_right">Right</string>
     <string name="app_sidebar_hide_labels_title">Hide icon labels</string>
-    <string name="app_sidebar_hide_labels_summary">Hide Appbar icon labels</string>
+    <string name="app_sidebar_hide_labels_summary">Hide sidebar icon labels</string>
     <string name="tab_category">Visible Tab</string>
     <string name="use_tab_title">Display tab</string>
-    <string name="use_tab_summary">Display a visible tab on the side which will display the appbar when touched.</string>
+    <string name="use_tab_summary">Display a visible tab on the side which will display the sidebar when touched.</string>
     <string name="tab_position_title">Tab location</string>
     <string name="tab_position_summary">Display the tab on the top, middle, or bottom on the side of the screen.</string>
     <string name="tab_size_title">Tab size</string>
