AE: Disable stock recents settings if alternative is enabled
Change-Id: I3daedc36d19d70bcf35c593a45769ced9fd34638

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -59,6 +59,7 @@
     <string name="recents_clear_all_location_bottom_center">Bottom center</string>
     <string name="recents_clear_all_dismiss_all_title">Clear all tasks</string>
     <string name="recents_clear_all_dismiss_all_summary">Include foreground task when clearing all</string>
+    <string name="stock_recents_disabled">Stock recents are disabled!</string>
 
     <!-- Change Log -->
     <string name="changelog_title">Changelog</string>
