AE: Make all 18 font variants available to Statusbar weather temp (2/2)
Change-Id: I759c82734bc5cc0548f100ec5225536d675072a0

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -252,10 +252,14 @@
     <string name="status_bar_weather_font_thin_italic">Thin Italic</string>
     <string name="status_bar_weather_font_condensed">Condensed</string>
     <string name="status_bar_weather_font_condensed_italic">Condensed Italic</string>
+    <string name="status_bar_weather_font_condensed_light">Condensed Light</string>
+    <string name="status_bar_weather_font_condensed_light_italic">Condensed Light Italic</string>
     <string name="status_bar_weather_font_condensed_bold">Condensed Bold</string>
     <string name="status_bar_weather_font_condensed_bold_italic">Condensed Bold Italic</string>
     <string name="status_bar_weather_font_medium">Medium</string>
     <string name="status_bar_weather_font_medium_italic">Medium Italic</string>
+    <string name="status_bar_weather_font_black">Black</string>
+    <string name="status_bar_weather_font_black_italic">Black Italic</string>
 
     <!-- Recents Fullscreen -->
     <string name="recents_show_fullscreen">Recents in fullscreen</string>
