--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -60,6 +60,7 @@
     <string name="recents_clear_all_dismiss_all_title">Clear all tasks</string>
     <string name="recents_clear_all_dismiss_all_summary">Include foreground task when clearing all</string>
     <string name="stock_recents_disabled">Stock recents are disabled!</string>
+    <string name="alternatives_title">Alternatives</string>
 
     <!-- Change Log -->
     <string name="changelog_title">Changelog</string>
