AE: QS shade transparency (2/2)
Change-Id: I9858568eb3870a453a0dd698e2f03642fb3db288

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -739,4 +739,7 @@
     <string name="block_on_secure_keyguard_title">Disable quick settings on lockscreen</string>
     <string name="block_on_secure_keyguard_summary">Disables quick settings in the keyguard for a secure lock only</string>
 
+    <!-- QS shade transparency -->
+    <string name="qs_transparent_shade">QS shade transparency</string>
+
 </resources>
