AE: Unbreak The Build
Change-Id: I432c4d735754c512d71f5fdcb86fca1e4630cdb4

--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -564,7 +564,7 @@
     <string name="wallpaper_intra_close_title">Animation für Bildhintergrund intra schließen</string>
     <string name="task_open_behind_title">Animation hinter offener Aufgabe</string>
     <string name="animation_duration_title">Animationsdauer</string>
-    <string name="animation_duration_default">Standard</string>>
+    <string name="animation_duration_default">Standard</string>
     <string name="title_animation_no_override">Verhindere App-Überschreibungen</string>
     <string name="summary_animation_no_override">Verhindere, dass Anwendungen die Überblendeffekte überschreiben.</string>
     <string name="animation_exit_only_title">Animation nur fürs Ausführen (Starten)</string>
