--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -261,10 +261,14 @@
     <string name="status_bar_weather_font_black">Black</string>
     <string name="status_bar_weather_font_black_italic">Black Italic</string>
 
-    <!-- Recents Fullscreen -->
-    <string name="recents_show_fullscreen">Recents in fullscreen</string>
-    <string name="recents_fullscreen_summary_enabled">Recents in fullscreen is enabled</string>
-    <string name="recents_fullscreen_summary_disabled">Recents in fullscreen is disabled</string>
+    <!-- Immersive Recents -->
+    <string name="immersive_recents_title">Immersive Recents</string>
+    <string name="immersive_recents_summary">Change the view of the recents screen</string>
+    <string name="immersive_recents_dialog_title">Select recents view</string>
+    <string name="immersive_recents_default">Default</string>
+    <string name="immersive_recents_fullscreen">Fullscreen</string>
+    <string name="immersive_recents_statusbar">Statusbar only</string>
+    <string name="immersive_recents_navbar">Navbar only</string>
     <string name="recents_full_screen_clock_title">Show clock</string>
     <string name="recents_full_screen_clock_summary">Shows clock at the top while in fullscreen</string>
     <string name="recents_full_screen_date_title">Show date</string>
