Longpress power lockscreen torch [2/2]
AICPfy:
- Hide setting on secured lockscreen

Change-Id: I10c8aa06c81ca020967d5d91e169a4531ed8a06a

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -742,4 +742,8 @@
     <!-- QS shade transparency -->
     <string name="qs_transparent_shade">QS shade transparency</string>
 
+    <!-- Lockscreen Torch -->
+    <string name="keyguard_torch_title">Lockscreen torch</string>
+    <string name="keyguard_torch_summary">Longpress power button while screen is off to turn on flashlight</string>
+
 </resources>
