--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -765,4 +765,8 @@
     <!-- Status bar header font style -->
     <string name="status_bar_header_font_style_title">Header font style</string>
 
+    <!-- QS Tiles Columns -->
+    <string name="qs_num_columns_title">Number of tiles per row</string>
+    <string name="qs_num_columns_showing">%1$s tiles per row showing</string>
+
 </resources>
