Very small update of french traslation
Change-Id: I420af5642639b372f414613db4f6f4c121e4e80e

--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -60,6 +60,7 @@
     <string name="recents_clear_all_dismiss_all_title">Effacer toutes les tâches</string>
     <string name="recents_clear_all_dismiss_all_summary">Inclure les tâches de premier plan lors de l\'effacement de toutes les tâches</string>
     <string name="stock_recents_disabled">Le panneau des applications récentes de base est désactivé !</string>
+    <string name="alternatives_title">Alternatives</string>
 
     <!-- Change Log -->
     <string name="changelog_title">Journal des modifications</string>
@@ -740,5 +741,9 @@
 
     <!-- QS shade transparency -->
     <string name="qs_transparent_shade">Transparence des réglages rapides</string>
+
+    <!-- Lockscreen Torch -->
+    <string name="keyguard_torch_title">Lampe torche sur l\'écran de vérouillage</string>
+    <string name="keyguard_torch_summary">Un appui long sur le bouton d'alimentation pendant que l\'écran est éteint allumera la lampe torche</string>
 
 </resources>
